PageCache autorelease should not wait until 3 seconds and 42 pages https://bugs.webkit.org/show_bug.cgi?id=85254 <rdar://problem/11349613>

Reviewed by Geoffrey Garen.

No new tests, since there is no change in behavior.

* history/PageCache.cpp:
(WebCore):
(WebCore::PageCache::PageCache):
(WebCore::PageCache::releaseAutoreleasedPagesNowDueToTimer):
* history/PageCache.h:
(PageCache):



Canonical link: https://commits.webkit.org/103100@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116027 268f45cc-cd09-0410-ab3c-d52691b4dbfc